<resources>
    <string name="app_name">Chie Japanese Language</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="school">Chie Japanese Language Online Tutorial Services</string>
    <string name="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="jlpt">What is JLPT?</string>
    <string name="jlpt_text">The Japanese-Language Proficiency Test (日本語能力試験, Nihongo Nōryoku Shiken), or JLPT, is a standardized criterion-referenced test to evaluate and certify Japanese language proficiency for non-native speakers, covering language knowledge, reading ability, and listening ability.[1] The test is held twice a year in Japan and selected countries (on the first Sunday of July and December), and once a year in other regions (on the first Sunday of December)</string>
    <string name="jft">What is JFT?</string>
    <string name="jft_text">JFT-Basic, also called JFT, stands for “Japan Foundation Test” which is a Japanese standardized test. JFT-Basic is not only used to measure one’s Japanese proficiency but it’s also largely used to demonstrate one’s Japanese proficiency during the job hunting process or when their applying for the Specified Skilled Worker visa. JFT-Basic aims to assess whether the test-taker has sufficient Japanese language proficiency when engaging in daily conversations to a certain degree and handling day-to-day life situations without any difficulties.</string>
    <string name="menu_home">Home</string>
    <string name="menu_hiragana">Hiragana</string>
    <string name="menu_katakana">Katakana</string>
    <string name="menu_kanji">Kanji</string>
    <string name="menu_about">Kanji</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_kanji_study">KanjiStudy</string>
    <string name="g_txt">Gujūon</string>
    <string name="d_txt">Dakuon</string>
    <string name="hd_txt">Han-Dakuon</string>
    <string name="foreign_txt">Additional letters for foreign sounds</string>
    <string name="yoon_txt">Yōon</string>
    <string name="sokuon_txt">Sokuon</string>
    <string name="g_k_txt">Gujūon</string>
    <string name="d_k_txt">Dakuon</string>
    <string name="hd_k_txt">Han-Dakuon</string>
    <string name="foreign_k_txt">Additional letters for foreign sounds</string>
    <string name="yoon_k_txt">Yōon</string>
    <string name="sokuon_k_txt">Sokuon</string>
    <string name="g_dsc">Gujūon</string>
    <string name="d_dsc">Dakuon</string>
    <string name="hd_dsc">Han-Dakuon</string>
    <string name="foreign_dsc">Additional letters for foreign sounds</string>
    <string name="yoon_dsc">Yōon</string>
    <string name="yoon2_dsc">Yōon</string>
    <string name="sokuon_dsc">Sokuon</string>
    <string name="g_k_dsc">Gujūon</string>
    <string name="d_k_dsc">Dakuon</string>
    <string name="hd_k_dsc">Han-Dakuon</string>
    <string name="foreign_k_dsc">Additional letters for foreign sounds</string>
    <string name="yoon_k_dsc">Yōon</string>
    <string name="yoon2_k_dsc">Yōon</string>
    <string name="sokuon_k_dsc">Sokuon</string>
    <string name="gj">In Japanese, syllables are organized in the form of a table (5 x 10). This table is called gojūon-zu (literally means table of 50 sounds).To describe these sounds, Hiragana and Katakana alphabets are used.Letters い, う and え appear more than once in the table. These 5 duplicates(gray colored) are usually skipped or ignored.Another syllable ん is included. It doesn\'t belong to any row or column.In total, 46 letters (45+1) are counted as gojūon (50 sounds).</string>
    <string name="dk">Dakuon literally means turbid or murky sound. It is the voiced sound of か [ka], さ [sa], た [ta] and は [ha]-row syllables.Dakuon is indicated with two small dots.Pronunciation of じ and ぢ, ず and づ are the same.</string>
    <string name="hd">Handakuon literally means half-turbid or half-murky sound. Handakuon is indicated with a small circle.</string>
    <string name="foreign">These additional letters are invented in modern era to describe the sounds of foreign language.Note: Foreign words are usually written in Katakana. These additional Hiragana letters are rarely used.</string>
    <string name="y">Yōon is a combination of the consonant of i-column syllables and ya, yu or yo. For example, k + ya = kya. Yōon is described by i-column letters plus small や, ゆ or よ. For example, き + ゃ = きゃ [kya]. Pronunciation of じゃ, じゅ, じょ and ぢゃ, ぢゅ, ぢょ are the same.</string>
    <string name="s">Sokuon is a pause (no sound) between two syllables. Sokuon is described by small つ.</string>
    <string name="gj_k">Traditionally, sounds of basic syllables are organized in the form of a table (5 x 10). This table is called gojūon-zu (literally means table of 50 sounds). To describe these sounds, Katakana and Hiragana alphabets are used. Letters イ, ウ and エ appear more than once in the table. These 5 duplicates (colored in gray) are usually skipped or ignored. Another syllable ン is included. It doesn\'t belong to any row or column. In total, 46 letters (45+1) are counted as gojūon (50 sounds).</string>
    <string name="dk_k">Dakuon literally means turbid or murky sound. It is the voiced sound of カ[ka], サ[sa], タ[ta] and ハ[ha]-row syllables.Dakuon is indicated with two small dots. Pronunciation of ジ[ji] and ヂ[ji], ズ[zu] and ヅ[zu] are the same.Letters ヂ and ヅ are rarely used.</string>
    <string name="hd_k">Handakuon literally means half-turbid or half-murky sound. Handakuon is indicated with a small circle.</string>
    <string name="foreign_k">These additional letters are invented in modern era to describe the sound of foreign languages.</string>
    <string name="y_k">Yōon is a combination of the consonant of i-column syllables and ya, yu or yo. For example, k + ya = kya.Yōon is described by i-column letters associated with ャ(small ya), ュ(small yu) or ョ(small yo). For example, キ + ャ = キャ[kya].Pronunciation of ジャ[ja], ジュ[ju], ジョ[jo] and ヂャ[ja], ヂュ[ju], ヂョ[jo] are the same.Letters ヂャ, ヂュ, ヂョ are rarely used.</string>
    <string name="s_k">Sokuon is a pause (no sound) between two syllables. Sokuon is described by ッ(small ツ[tsu]).</string>
    <string name="title_activity_lesson1_grammar">Lesson1_Grammar_Activity</string>
    <string name="part1">は – wa - は (wa) follows the topic the speaker wants to talk about. Therefore, wa（は）is often called topic marking particle. The “topic” is often the grammatical subject, but can be anything (including the grammatical object, and sometimes the verb), and it may also follow some other particles.</string>
    <string name="part2">に – ni - に (ni) indicates a place toward where someone or something moves. It is preceded by the name of the place and followed by a verb which indicates a moving action such as iku (行く) “to go.” It is also used with giving/receiving verbs and can then mean “from”. In the case of passive verbs, it marks the grammatical agent, making it the same as “by” in English. (i.e. “my wallet was stolen by my brother.” ). に is also used to indicate the location of existence when combined with the verbs いる or ある, making it the Japanese version of “at” (in some instances).</string>
    <string name="part3">で – de - で (de) is used to indicate location of an action. The performer of the action (the subject) is followed by either of the particles wa or ga, and the place is followed by de. However it can’t be used with with the verbs いる or ある.</string>
    <string name="part4">が – ga - が (ga) marks the grammatical subject of a sentence when it is first introduced to a conversation. It can also be used to join sentences, like the word “but”, but that が is technically a different word. The particle が can also be used to emphasize the subject or distinguish it from others. While は is used when a question word (who, where, etc) comes after the topic in the sentence (レストランはどこですか。), we use the particle が when the question word is the subject or part of it.</string>
    <string name="part5">の – no - の (no) indicates possession (functioning like the English “apostrophe-S”). In the structure A no B, B belongs to A, however, many nouns act like adjectives when followed by no. It directly follows nouns and noun phrases.</string>
    <string name="part6">から – kara - から (kara) indicates the source of an object or action. This starting position may be either a point in space (in which case it is translated as “from”), or a point in time (in which case it is translated as “since” or “after”).</string>
    <string name="part7">まで – made - まで (made) indicates that an action/effect extends or reaches a specified limit or a point in time or space. It is therefore equivalent to the English expression “until.”</string>
    <string name="part8">と – to - と (to) is used to join nouns together into an exhaustive list that functions as a single noun: ”with”, “and”. It’s also the particle used to indicate a direct quote (from someone’s mind or speech), functioning like quotation marks in English.</string>
    <string name="part9">や – ya - や (ya) is used in the same way as the first sense of と, but the list is not exhaustive. It means “such things as A, B, and C”.</string>
    <string name="pat">Pattern 1\n If verbs end with -aru, they are intransitive verbs.They become transitive verbs by replacing -aru with eru.</string>
    <string name="pat2">Pattern 2\n If verbs end with -reru, they are intransitive verbs.They become transitive verbs by replacing -reru with su.</string>
    <string name="pat3">Pattern 3\nIf verbs end with -reru, they are intransitive verbs. They become transitive verbs by replacing -reru with ru.</string>
    <string name="pat4">Pattern 4\n If verbs end with -areru, they are intransitive verbs.They become transitive verbs by replacing -areru with u.</string>
    <string name="pat5">Pattern 5\n If verbs end with -su, they are transitive verbs. They become intransitive verbs by replacing -su with ru.</string>
    <string name="pat6">Pattern 6\n If verbs end with -asu, they are transitive verbs. They become intransitive verbs by replacing -asu with eru.</string>
    <string name="g1">1. おはよう			Ohayou		Good morning</string>
    <string name="g2">2. おはよう　ございます	Ohayou gozaimasu	Good morning (polite)</string>
    <string name="g3">3. こんにちは		Konnichiwa		Good afternoon</string>
    <string name="g4">4. こんばんは		Konbanwa		Good evening</string>
    <string name="g5">5. さようなら		Sayounara		Goodbye</string>
    <string name="g6">6. おやすなさい		Oyasuminasai	Goodnight</string>
    <string name="g7">7. ありがとう		Arigatou		Thank you</string>
    <string name="g8">8. ありがとうございます	Arigatou gozaimasu	Thank you (polite)</string>
    <string name="g9">9. すみません		Sumimasen 		Excuse me / I`m sorry</string>
    <string name="g10">10. いいえ			Iie			No / Not at all</string>
    <string name="g11">11. いってきます		Ittekimasu		I`ll go and come back</string>
    <string name="g12">12. いってらっしゃい	Itterashai		Please go and come back</string>
    <string name="g13">13. ただいま			Tadaima			I`m home</string>
    <string name="g14">14. おかえりなさい		Okaerinasai		Welcome home</string>
    <string name="g15">15. いただきます		Itadakimasu		Thank you for the meal (before eating)</string>
    <string name="g16">16. ごちそうさま		Gochisousama	Thank you for the meal (after eating)</string>
    <string name="g17">17. はじめまして		Hajimemashite	Nice to meet you</string>
    <string name="g18">18. どうぞよろしく		Douzo Yoroshiku	Nice to meet you / kindly;acceptably.</string>
</resources>