<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/maverick"
    tools:context=".ui.hiragana.HiraganaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Gojuon-->
        <TextView
            android:id="@+id/tv_gojuon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/g_txt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_gojuon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/gj"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/gojuon"
            android:contentDescription="@string/g_dsc"/>

        <!--Dakuon-->
        <TextView
            android:id="@+id/tv_dakuon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/d_txt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_dakuon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/dk"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/dakuon"
            android:contentDescription="@string/d_dsc"/>

        <!--Han_Dakuon-->
        <TextView
            android:id="@+id/tv_han_dakuon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hd_txt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_han_dakuon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/hd"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/han_dakuon"
            android:contentDescription="@string/hd_dsc"/>

        <!--Foreign Sounds-->
        <TextView
            android:id="@+id/tv_foreign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/foreign_txt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_foreign2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/foreign"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/foreign"
            android:contentDescription="@string/foreign_dsc"/>

        <!--Yoon-->
        <TextView
            android:id="@+id/tv_yoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/yoon_txt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_yoon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/y"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/yoon1"
            android:contentDescription="@string/yoon_dsc" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"

            android:scaleType="fitXY"
            android:src="@drawable/yoon2"
            android:contentDescription="@string/yoon2_dsc" />

        <!--Sokuon-->
        <TextView
            android:id="@+id/tv_sokuon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sokuon_txt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_sokuon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/s"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/sokuon"
            android:contentDescription="@string/sokuon_dsc" />

    </LinearLayout>
</ScrollView>