<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/maverick"
    tools:context=".ui.katakana.KatakanaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--Gojuon-->
        <TextView
            android:id="@+id/tv_gojuon_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/g_k_txt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_gojuon2_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/gj_k"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/gojuon_k"
            android:contentDescription="@string/g_k_dsc"/>

        <!--Dakuon-->
        <TextView
            android:id="@+id/tv_dakuon_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/d_k_txt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_dakuon2_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/dk_k"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/dakuon_k"
            android:contentDescription="@string/d_k_dsc"/>

        <!--Han_Dakuon-->
        <TextView
            android:id="@+id/tv_han_dakuon_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hd_k_txt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_han_dakuon2_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/hd_k"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/han_dakuon_k"
            android:contentDescription="@string/hd_k_dsc"/>

        <!--Foreign Sounds-->
        <TextView
            android:id="@+id/tv_foreign_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/foreign_k_txt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_foreign2_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/foreign_k"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/foreign_k"
            android:contentDescription="@string/foreign_k_dsc" />

        <!--Yoon-->
        <TextView
            android:id="@+id/tv_yoon_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/yoon_k_txt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_yoon2_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/y_k"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/yoon1_k"
            android:contentDescription="@string/yoon_k_dsc" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/yoon2_k"
            android:contentDescription="@string/yoon2_k_dsc" />

        <!--Sokuon-->
        <TextView
            android:id="@+id/tv_sokuon_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sokuon_k_txt"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_sokuon2_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/s_k"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/sokuon_k"
            android:contentDescription="@string/sokuon_k_dsc" />
    </LinearLayout>
</ScrollView>